semi fixed layout -desktop

--- a/style.css
+++ b/style.css
@@ -18,7 +18,18 @@
 }
 
 
-
+.fourcon{
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
 
 
 .first{
@@ -307,7 +318,8 @@
 .mial{
     height: 50px;
     margin-top: 25px;
-    
+    text-align: center;
+
     
     
 }
@@ -326,6 +338,7 @@
     align-items: center;
     justify-content: center;
     margin-bottom: 10px;
+    text-align: center;
     
       
 }
@@ -338,6 +351,12 @@
     outline: none;
     width: 50px;
     border-radius: 9px;
+    width: auto;
+    max-width: 268px;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    color: #FFF500;
 
 }
 
@@ -367,17 +386,20 @@
         justify-content: center;
         align-items: center;
         height: 100vh;
+        margin-bottom: 150px;
     }
 
     .desk3{
-        max-width: 760px;
+        max-width: 760px !important;
+        margin-bottom: 50px;
     }
 
     .hero{
         
         align-items: flex-start;
         font-size: 32px;
-        min-width: 500px;
+        max-width: 500px;
+        width: auto;
     }
 
     .hero1{
@@ -408,6 +430,7 @@
         display: flex;
         align-items: flex-end;
         text-align: right;
+        z-index: 0;
     }
 
     .fourcon{
@@ -672,6 +695,7 @@
         
         
         
+        
     }
     
     .mail{
@@ -688,6 +712,7 @@
         align-items: center;
         justify-content: center;
         margin-bottom: 10px;
+        text-align: center;
         
           
     }
@@ -696,10 +721,13 @@
         height: 100%;
         border: none;
         background-color: #1b1b1b !important;
-        resize: none;
-        outline: none;
-        width: 50px;
+        color: #FFF500;
+        width: auto;
+        max-width: 268px;
         border-radius: 9px;
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
     
     }
     
