--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
     scroll-behavior: smooth;
     
 }
-@media screen and (min-width: 640px) {
+@media screen and (max-width: 640px) {
 
    * {
        margin-top: "5%";
