--- a/style.css
+++ b/style.css
@@ -416,7 +416,6 @@
     }
 
     .hero{
-        
         align-items: flex-start;
         font-size: 32px;
         max-width: 500px;
@@ -429,12 +428,12 @@
     }
 
     .first{
-       
-        
+        margin-top: 50px;
         width: 100%;
     }
     
     .fourth{
+        margin-top: 50px;
         flex-direction: row;
         justify-content: center;
     }
@@ -444,6 +443,7 @@
         justify-content: center;
         height: 100vh;
         width: 100%;
+        margin-top: 50px;
     }
 
     .ralign{
@@ -471,11 +471,9 @@
         margin-top: 200px;
     }
 
-    
-.topnavpng{
-    width: 15%;
-}
-
+    .topnavpng{
+        width: 15%;
+    }
     
     * {
         margin: 0%;
@@ -485,37 +483,30 @@
         font-family: 'Poppins', sans-serif;
         scroll-snap-type: x mandatory;
         scroll-behavior: smooth;
-        
+        margin-top: 5%;
     }
-    
-    
-    
-    
-    
+
     .firstimg{
         margin-top: 50px;
         width: 85vw;
         max-width: 548px;
         margin-bottom: 100px;
     }
-    
-    
-    
+
     .secondimg{
         margin-top: 45px;
         width: 85vw;
         max-width: 562px;
         margin-bottom: 100px;
     }
-    
+
     .thirdimg{
         margin-top: 25px;
         width: 85vw;
         max-width: 760px;
         margin-bottom: 60px;
     }
-    
-    
+
     .fourthimg{
         margin-top: 45px;
         width: 85vw;
@@ -523,19 +514,15 @@
         margin-bottom: 100px;
     }
 
-    
     .yelbg{
         background-color: #FFF500;
     }
-    
+
     .darbg{
         background-color: #1b1b1b;
         color: white;
-        
     }
-    
-    
-    
+
     .third{
         height: 100vh;
         justify-content: center;
@@ -543,9 +530,8 @@
         display: flex;
         flex-direction: column;
         width: 100%;
-        
     }
-    
+
     .fifth{
         height: 100vh;
         justify-content: center;
@@ -553,10 +539,8 @@
         display: flex;
         flex-direction: column;
         width: 100%;
-        
     }
-    
-    
+
     .threetxt{
         text-align: center;
         justify-content: center;
@@ -567,13 +551,12 @@
         flex-direction: column;
         width: auto;
         margin-top: 25px;
-        
     }
 
     .big{
         font-size: 200%;
     }
-    
+
     .fivetxt{
         text-align: center;
         justify-content: center;
@@ -583,9 +566,8 @@
         display: flex;
         flex-direction: column;
         width: auto;
-        
     }
-    
+
     .hbtn{
         font-size: 24px;
         color: white;
@@ -595,17 +577,17 @@
         margin-top: 50px;
         text-decoration: none;
     }
-    
+
     .underline-yellow{
         text-decoration: underline;
         text-decoration-color: #FFF500;
         text-decoration-thickness: 5px;
     }
-    
+
     .highlight-yellow{
         position:relative;
-      }
-      
+    }
+
     .highlight-yellow:before{
         content:"";
         background-color:#FFF500;
@@ -617,12 +599,12 @@
         left:-0.25em;
         top:0.4em;
         padding:0 0.25em;
-      }
-    
+    }
+
     .highlight-cyan{
         position:relative;
-      }
-      
+    }
+
     .highlight-cyan:before{
         content:"";
         background-color:#00FFC2;
@@ -634,12 +616,12 @@
         left:-0.25em;
         top:0.4em;
         padding:0 0.25em;
-      }
-    
+    }
+
     .highlight-pur{
         position:relative;
-      }
-      
+    }
+  
     .highlight-pur:before{
         content:"";
         background-color:#7000ff !important;
@@ -651,65 +633,61 @@
         left:-0.25em;
         top:0.3em;
         padding:0 0.25em;
-      }
-    
-    
-      .container {
+    }
+
+    .container {
         scroll-snap-type: y mandatory;
         overflow-y: scroll;
         height: 100vh;
         align-items: center;
-        
     }
-      
-      section {
+
+    section {
         scroll-snap-align: start;
-      }
+    }
     
-      .timg{
-          width: 150px;
-          height: auto;
-          
-          padding-top: 50px;
-          display: flex;
-          align-items: center;
-          margin-top: 0;
-          margin-right: 0;
-      }
-    
-      .tcard{
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          flex-direction: column;
-          margin: 25px;
-          max-width: 33%;
+    .timg{
+        width: 150px;
+        height: auto;
+        padding-top: 50px;
+        display: flex;
+        align-items: center;
+        margin-top: 0;
+        margin-right: 0;
+    }
 
-      }
+    .tcard{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        margin: 25px;
+        max-width: 33%;
+    }
 
-      .tcard:last-child{
-          margin-right: 0px;
-      }
-    
-      .tcon{
+    .tcard:last-child{
+        margin-right: 0px;
+    }
+
+    .tcon{
         display: flex;
         flex-direction: column;
         justify-content: center;
         margin-top: 50px;
-      }
+    }
     
-      .ttitle{
-          color: #7000ff;
-          text-align: center;
-      }
+    .ttitle{
+        color: #7000ff;
+        text-align: center;
+    }
 
-      .ttext{
+    .ttext{
         text-align: center;
         font-size: 15px;
         font-style: normal;
-      }
+    }
     
-      .fiveetxt{
+    .fiveetxt{
         text-align: center;
         justify-content: center;
         align-items: center;
@@ -719,20 +697,12 @@
         flex-direction: column;
         width: auto;
         max-width: 768px;
-        margin-top: 150px;
-        
+        margin-top: 150px;    
     }
-    
+
     .mial{
         height: 50px;
         margin-top: 25px;
-        /* display: flex;
-        flex-direction: row;
-        align-items: center; */
-        
-        
-        
-        
     }
     
     .mail{
@@ -750,10 +720,9 @@
         justify-content: center;
         margin-bottom: 10px;
         text-align: center;
-        width: 267px;
-          
+        width: 267px;          
     }
-    
+
     .mbtn{
         height: 100%;
         border: none;
@@ -764,8 +733,7 @@
         border-radius: 9px;
         display: flex;
         align-items: center;
-        justify-content: space-evenly;
-    
+        justify-content: space-evenly;    
     }
     
     .sixty{
@@ -800,7 +768,4 @@
         max-width: 768px;
         width: auto;
     }
-
 }
-
-
