--- a/style.css
+++ b/style.css
@@ -337,6 +337,7 @@
     height: 50px;
     margin-top: 25px;
     text-align: center;
+    margin-bottom: 25px;
 }
 
 .mail{
@@ -697,12 +698,13 @@
         flex-direction: column;
         width: auto;
         max-width: 768px;
-        margin-top: 150px;    
+        margin-top: 15px;    
     }
 
     .mial{
         height: 50px;
         margin-top: 25px;
+        margin-bottom: 25px;
     }
     
     .mail{
