--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@
     margin-top: 50px;
     width: 85vw;
     max-width: 336px;
-    margin-bottom: 100px;
+    margin-bottom: 50px;
 }
 
 
@@ -211,7 +211,7 @@
     background-color: #1b1b1b;
     padding: 18px 38px;
     border-radius: 9px;
-    margin-top: 50px;
+    margin-top: 25px;
     text-decoration: none;
 }
 
@@ -380,6 +380,20 @@
     flex-direction: column;
 }
 
+.ttext{
+    text-align: center;
+    font-size: 5px;
+    font-style: normal;
+    display: block;
+}
+
+.cardrow{
+    height: 75vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
 
 @media only screen and (min-width: 600px) {
     .firstcontainer{
@@ -673,6 +687,7 @@
         text-align: center;
         font-size: 15px;
         font-style: normal;
+        display: block;
     }
     
     .fiveetxt{
