--- a/style.css
+++ b/style.css
@@ -317,8 +317,7 @@
     display: flex;
     flex-direction: column;
     width: 299px;
-    margin-top: 50px;
-    
+    margin-top: 5px;
 }
 
 .mial{
@@ -399,8 +398,8 @@
 .tcard{
     display: flex;
     align-items: center;
-    flex-direction: column;
-    margin: 25px;
+    flex-direction: row;
+    margin: 5px;
     width: 60vh;
     justify-content: stretch;
 }
